--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "firebase": "^10.12.0",
+    "i18n-iso-countries": "^7.14.0",
     "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
